Add Styling to 1st Block (Header and Hero Text)
The purpose of this commit was to add styling to
the first block of the website, which includes the
header and hero text.

The following changes were made:
- Added background colors and font styling
- General sizing and adjustments with padding
  and margins
- Used flexbox to arrange elements
- Image rounding
- Created floating header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Landing Page</title>
 </head>
 
@@ -23,11 +24,11 @@
         <div class="text-image">
             <div class="text-left">
                 <h2>This website is awesome</h2>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color
                     is lower contrast.</p>
                 <button>Sign up</button>
             </div>
-            <img src="imgs/skz-logo-crop.jpg" alt="temp placeholder">
+            <img src="imgs/skz-logo-crop.jpg" alt="stray kids logo">
         </div>
     </div>
 
