Style Blocks 4-5 and Update Index.html
This commit adds styling to blocks 4 and
5(footer) to finish matching the design of the
provided mockup. It also updates information on
index.html, specifically the text and links
in the header.

The following changes were made:
- Added styling to blocks 4 and 5 using flexbox
  and general styling
- Updated text to match theme of the website
- Updated links in the header and added
  social media icons

--- a/index.html
+++ b/index.html
@@ -12,20 +12,25 @@
     <div class="block-1">
         <div class="header-nav">
             <div class="header-logo">
-                <h1>stay.co</h1>
+                <a href="index.html"><h1>stay.co</h1></a>
                 <img src="imgs/puppym-crop.png" class="logo-icon">
             </div>
             <ul class="links">
-                <li><a href="#">link 1</a></li>
-                <li><a href="#">link 2</a></li>
-                <li><a href="#">link 3</a></li>
+                <li><a href="https://twitter.com/Stray_Kids" target="_blank" rel="noopener noreferrer">
+                    <img src="imgs/twitter.png" class="header-link"></a>
+                </li>
+                <li><a href="https://www.instagram.com/realstraykids?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer">
+                    <img src="imgs/instagram.png" class="header-link"></a>
+                </li>
+                <li><a href="https://github.com/sjsusu/odin-landing-page" target="_blank" rel="noopener noreferrer">
+                    <img src="imgs/github.svg" class="header-link"></a>
+                </li>
             </ul>
         </div>
         <div class="text-image">
             <div class="text-left">
-                <h2>This website is awesome</h2>
-                <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color
-                    is lower contrast.</p>
+                <h2>Stray Kids are AWESOME</h2>
+                <p class="subtext">Once a stay, always a stay. You make Stray Kids stay.</p>
                 <button>Sign up</button>
             </div>
             <img src="imgs/skz-logo-crop.jpg" alt="stray kids logo">
@@ -33,39 +38,38 @@
     </div>
 
     <div class="block-2">
-        <h3>Some random information.</h3>
+        <h3>Some of our Members</h3>
         <div class="boxes">
             <div class="box-1">
                 <img src="imgs/wolfchan.jpg" class="icon">
-                <p>some subtext</p>
+                <p>- WolfChan -</p>
             </div>
             <div class="box-2">
                 <img src="imgs/dwaekki.jpg" class="icon">
-                <p>some subtext</p>
+                <p>- Dwaekki -</p>
             </div>
             <div class="box-3">
                 <img src="imgs/han-quokka.jpg" class="icon">
-                <p>some subtext</p>
+                <p>- HanQuokka -</p>
             </div>
             <div class="box-4">
                 <img src="imgs/leebit.jpg" class="icon">
-                <p>some subtext</p>
+                <p>- Leebit -</p>
             </div>
         </div>
     </div>
 
     <div class="block-3">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-            or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
-        <p class="author">-Thor, God of Thunder</p>
+        <p class="quote">Like mate, stop procrastinating.</p>
+        <p class="author">-Bangchan, Stray Kids</p>
     </div>
 
     <div class="block-4">
         <div class="text">
-            <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product by clicking right over there!</p>
+            <h4>Calling all stays!</h4>
+            <p class="">Be sure to support Stray Kids!</p>
         </div>
-        <button>Sign Up</button>
+        <button class="button">Sign Up</button>
     </div>
 
     <div class="footer">
