Add Styling for Smaller Windows
Added more responsive styling for smaller windows
like mobile devices. Also updated header and hero
text to avoid overlapping on smaller screens.

The following changes were made:
- Added padding to Hero section to avoid header
  overlap
- Added relative sizing to hero image
- Aligned author of quote to the right
- Added shadow to images and Block 4
- Minor padding/margin adjustments
- Minor Text Updates on Index page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <ul class="links">
                 <li><a href="https://twitter.com/Stray_Kids" target="_blank" rel="noopener noreferrer">
-                    <img src="imgs/twitter.png" class="header-link"></a>
+                    <img src="imgs/twitter.png" class="header-link twitter"></a>
                 </li>
                 <li><a href="https://www.instagram.com/realstraykids?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer">
                     <img src="imgs/instagram.png" class="header-link"></a>
@@ -30,15 +30,15 @@
         <div class="text-image">
             <div class="text-left">
                 <h2>Stray Kids are AWESOME</h2>
-                <p class="subtext">Once a stay, always a stay. You make Stray Kids stay.</p>
+                <p class="subtext">Once a stay, always a stay. Stray Kids everywhere all around the world!</p>
                 <button>Sign up</button>
             </div>
-            <img src="imgs/skz-logo-crop.jpg" alt="stray kids logo">
+            <img src="imgs/skz-logo-crop.jpg" alt="stray kids logo" class="logo-image">
         </div>
     </div>
 
     <div class="block-2">
-        <h3>Some of our Members</h3>
+        <h3>Some of our Lovely (ew) Members</h3>
         <div class="boxes">
             <div class="box-1">
                 <img src="imgs/wolfchan.jpg" class="icon">
@@ -67,7 +67,7 @@
     <div class="block-4">
         <div class="text">
             <h4>Calling all stays!</h4>
-            <p class="">Be sure to support Stray Kids!</p>
+            <p class="">You make Stray Kids stay!</p>
         </div>
         <button class="button">Sign Up</button>
     </div>
